--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-game-engine": "^1.2.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-vector-icons": "^9.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
